www/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ps-ingress
spec:
  backend:
    serviceName: ps-app-ui
    servicePort: 8000
