www/inn.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ps-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /ps/dev
        backend:
          serviceName: ps-app-ui
          servicePort: 80
