www/min.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: psapp.cicd.plxs.io
    http:
      paths:
      - path: /
        backend:
          serviceName: ps-app-ui
          servicePort: 8000
