www/psq.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ps-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /ps/svc
        backend:
          serviceName: ps-app-svc
          servicePort: 3000
