www/psui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ps-ingress-1
  annotations:
    ingress.kubernetes.io/rewrite-target: /*
spec:
  rules:
  - http:
      paths:
      - path: /ps/ui
        backend:
          serviceName: ps-app-ui
          servicePort: 80
