www/psx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ps-ingress-1
spec:
  rules:
  - http:
      paths:
      - path: /ps/ui/*
        backend:
          serviceName: ps-app-ui
          servicePort: 80
