www/staticIngress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ps-ingress
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: "/"
        backend:
          serviceName: ps-app-ui
          servicePort: 8000
